tests/errors/surf_type_12.ki
# type/operator: an unhashable List cannot be a Dict key
var d = {[1]: "a"}
discard d
